tests/fixtures/invalid/bool_bitand_bytes.py
# Cannot bitwise AND Bool and Bytes
x: bool = True & b"hello"
